# electrode-coating-chamber

./: .gitignore  vacuum_steppers.ino
control_sequence/: control_sequence.puml
firmware/: firmware.ino  vacuum_steppers.ino
gui/: pyproject.toml
gui/src/: Model.py  View.py  controller.py  custom_widgets.py  gui.py  main.py  model.py  serial_manager.py  serial_monitor.py  serial_threads.py  view.py  widgets.py
gui/tests/: serial_helper.py
