[project]
name = "electrode-coating-chamber"
version = "1.0.0a2"
description = "The GUI and Serial Monitor component of the two stepper system of the Electrode chamber."
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.3.0"
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"